get event details

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-DATABASE_URL=postgresql://event_management_db_fadr_user:gJKij8loukhpOlKrSpDFaf4eWWhG8mhS@dpg-d1r3du6mcj7s73af84f0-a/event_management_db_fadr
+DATABASE_URL=postgresql://postgres:root@localhost:5432/event_management
